src/test/testData/kubernetes/KUBE001/pod-global-null-security-context.yaml.denied
apiVersion: v1
kind: Pod
metadata:
  name: static-web-all-null
  labels:
    role: myrole
spec:
  <error descr="Container runs as root or can gain root privileges.">securityContext</error>:
    runAsGroup: 1000
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
      securityContext:
        runAsGroup: 1000